[CLEANUP] random char remove

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -16,7 +16,7 @@
                     <ul class="actions">
                         <li><input type="submit" value="Send" class="special" /></li>
                     </ul>
-                </form>            {
+                </form>            
             {% endif %}
         </section>
 
