--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -33,10 +33,9 @@
 <div id="wrapper">
     <header id="header">
         <div class="inner">
-            <a href="index.html" class="logo">
-                <span class="symbol"><img src="{{ url('theme://images/logo.svg') }}" alt=""/></span><span class="title">Phantom</span>
+            <a href="{{ home_url }}" class="logo">
+                <span class="symbol"><img src="{{ url('theme://images/logo.svg') }}" alt=""/></span><span class="title">{{ page.title }}</span>
             </a>
-
             <nav>
                 <ul>
                     <li><a href="#menu">Menu</a></li>
