added minimal styling form notices

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,10 @@
 button{
     margin-top: 1em;
 }
+
+.notices{
+    font-family: "Courier New", monospace;
+    width: 50%;
+    position: absolute;
+    top:0;
+}
