--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -3,23 +3,9 @@
         <section>
             <h2>Get in touch</h2>
             {% if page.header.footer.form_enabled  %}
-                <form method="post" action="{{ page.header.footer.form_action }}">
-                    <div class="field half first">
-                        <input type="text" name="name" id="name" placeholder="Name" />
-                    </div>
-                    <div class="field half">
-                        <input type="email" name="email" id="email" placeholder="Email" />
-                    </div>
-                    <div class="field">
-                        <textarea name="message" id="message" placeholder="Message"></textarea>
-                    </div>
-                    <ul class="actions">
-                        <li><input type="submit" value="Send" class="special" /></li>
-                    </ul>
-                </form>            
+                {% include "forms/form.html.twig" %}
             {% endif %}
         </section>
-
         <section>
             <h2>Follow</h2>
             <ul class="icons">
@@ -29,5 +15,8 @@
                 {% endfor %}
             </ul>
         </section>
+        <ul class="copyright">
+            <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
     </div>
 </footer>
